<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MenuFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textSize="10dp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/rules_button"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:text="@string/rules_button"
        android:textSize="6dp" />

    <Button
        android:id="@+id/authors_button"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:text="@string/authors_button"
        android:textSize="6dp" />

    <Button
        android:id="@+id/events_button"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:text="@string/events_button"
        android:textSize="6dp" />

    <!--    <Button
        android:id="@+id/quit_button"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:text="@string/quit_button"
        android:layout_gravity="center"
        android:textSize="6dp"/>

        -->



    <Button
        android:id="@+id/backSetting_button"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:text="@string/back_button"
        android:layout_gravity="center"
        android:textSize="6dp"/>



</LinearLayout>