<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NameFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name_text" />



    <EditText
        android:id="@+id/input_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/enter_name_hint"
        android:layout_gravity="center_vertical"/>

    <Button
        android:id="@+id/check_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_button"
        android:layout_gravity="center_vertical"/>



</LinearLayout>